--- a/.gitignore
+++ b/.gitignore
@@ -134,8 +134,6 @@ venv.bak/
 .mypy_cache/
 .dmypy.json
 dmypy.json
-credentials.json
-token.json
 
 # Pyre type checker
 .pyre/
@@ -152,3 +150,8 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Custom Directries and Files
+Computers_Drive
+credentials.json
+token.json
